fixed balin instagram section mobile

--- a/resources/assets/sass/web_v2/balin.scss
+++ b/resources/assets/sass/web_v2/balin.scss
@@ -132,6 +132,12 @@ body {
 .shop-by-style-mobile .content img{
 	height: 39vw;
 }
+.instagram-mobile {
+	margin-left:0px; 
+	margin-right:0px;
+	padding-left:25px; 
+	padding-right:25px;
+}
 
 /** tablet **/
 @media screen and (min-width: 768px) and (max-width: 992px){
